--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(
+      0deg,
+      rgba(129, 141, 153, 0.671),
+      rgba(227, 227, 228, 0.719)
+    ),
+    url("https://i.pinimg.com/originals/5d/5c/30/5d5c30677e5e250e1b91f5ff44d32ae4.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: rgba(177, 177, 177, 0.605);
+  text-shadow: 1px 1px 2px rgb(250, 250, 250);
+}
+
+a {
+  text-decoration: none;
+}
